--- a/app/comps/facturado/facturado.html
+++ b/app/comps/facturado/facturado.html
@@ -204,7 +204,7 @@
                     </thead>
                     <tbody>
 
-                      <tr  ng-repeat="fact in facturas | orderBy:'-fecha_factura'"  ng-click="selectFactura(facturasList[fact])" ng-class="{ selectedRow : $index == productIndex }" >
+                      <tr  ng-repeat="fact in facturas | orderBy:'fecha_factura'"  ng-click="selectFactura(facturasList[fact])" ng-class="{ selectedRow : $index == productIndex }" >
                         <td><p class="text-center">{{ $index + 1 }}</p></td>
                         <!-- <td><p class="text-center">{{ fact }}</p></td> -->
                         <!-- <td><p class="text-center">{{ facturasList[fact][0].fecha_pedido }}</p></td> -->
@@ -216,7 +216,7 @@
                         <td ng-if="!isEmpleado" ><p class="text-center">{{ fact.fecha_entrega }}</p></td>
                         <!-- <td><p class="text-center">{{  facturasList[fact][0].email_vendedor }}</p></td> -->
                         <td>
-                          <i class="fa fa-eye" style="cursor: pointer;"   ng-click="selectFactura(facturasList[fact], fact)"  data-toggle="modal" data-target="#modalFactura"  ></i>
+                          <i class="fa fa-eye" style="cursor: pointer;"   ng-click="selectFactura(facturasList[fact.nro_factura], fact)"  data-toggle="modal" data-target="#modalFactura"  ></i>
                         </td>
                       </tr>
 
