--- a/app/index.html
+++ b/app/index.html
@@ -64,7 +64,7 @@
             <div class="container">
 
               <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                  <h3><p class="text-center">Desea cerrar la session?</p></h3>
+                  <h3><p class="text-center">¿Desea cerrar la sesion?</p></h3>
               </div>
 
             </div>
