--- a/app/comps/facturado/facturado.html
+++ b/app/comps/facturado/facturado.html
@@ -216,7 +216,7 @@
                         <td ng-if="!isEmpleado" ><p class="text-center">{{ fact.fecha_entrega }}</p></td>
                         <!-- <td><p class="text-center">{{  facturasList[fact][0].email_vendedor }}</p></td> -->
                         <td>
-                          <i class="fa fa-eye" style="cursor: pointer;"   ng-click="selectFactura(facturasList[fact.nro_factura], fact)"  data-toggle="modal" data-target="#modalFactura"  ></i>
+                          <i class="fa fa-eye" style="cursor: pointer;"   ng-click="selectFactura(fact.detalle, fact.nro_factura)"  data-toggle="modal" data-target="#modalFactura"  ></i>
                         </td>
                       </tr>
 
