--- a/app/comps/facturado/facturado.html
+++ b/app/comps/facturado/facturado.html
@@ -70,15 +70,15 @@
 
                                                       <tr>
                                                           <td class="right">
-                                                              <strong class="text-dark">Total bs</strong> </td>
+                                                              <strong class="text-dark">Total Bs.s</strong> </td>
 
                                                               <td class="right">{{formato(2,totalfactura.bs)}} </td>
                                                       </tr>
                                                       <tr>
                                                           <td class="right">
-                                                              <strong class="text-dark">Total usd</strong> </td>
+                                                              <strong class="text-dark">Total USD</strong> </td>
 
-                                                              <td class="right">{{formato(2,totalfactura.usd)}} </td>
+                                                              <td class="right">{{formato(3,totalfactura.usd)}} </td>
                                                       </tr>
                                                   </tbody>
                                               </table>
