--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -1134,7 +1134,7 @@
                     </div>
 
                     <div class="alert alert-warning alert-dismissible fade show" ng-show="counter > 600000 && counter < timeLimit" role="alert">
-                      <strong>Advertencia!</strong> Dispone de menos de 15 minutos de inactividad
+                      <strong>Advertencia!</strong> Dispone de menos de 15 minutos para finalizar su pedido de lo contrario sera cancelado por el sistema
                     </div>
                   </div>
 
