--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -1133,7 +1133,7 @@
                       </button>
                     </div>
 
-                    <div class="alert alert-warning alert-dismissible fade show" ng-show="counter > 600000 && counter < timeLimit" role="alert">
+                    <div class="alert alert-warning alert-dismissible fade show" ng-show="msgOrdCancel" role="alert">
                       <strong>Advertencia!</strong> Dispone de menos de 15 minutos para finalizar su pedido de lo contrario sera cancelado por el sistema
                     </div>
                   </div>
