--- a/app/comps/login/login.html
+++ b/app/comps/login/login.html
@@ -14,7 +14,7 @@
                   <div class="form-group"><input class="form-control" type="text" name="username" placeholder="Username" ng-model="user.username"></div>
                   <div class="form-group"><input class="form-control" type="password" name="password" placeholder="Password" ng-keydown="$event.keyCode === 13 && login()" ng-model="user.password"></div>
                   <div class="g-recaptcha" data-sitekey="6LeY06oUAAAAANYQWer17SpCoL_JKWQQusxCzS3l"></div>
-                  <div class="form-group"><button class="btn btn-primary btn-block" type="button" ng-click="login()">Log In</button></div><a href="" class="forgot">¿Olvidó su contraseña?</a></form>
+                  <div class="form-group"><button class="btn btn-primary btn-block" type="button" ng-click="login()">Log In</button></div><a href="#!/olvidoPass" class="forgot">¿Olvidó su contraseña?</a></form>
           </div>
 
     </div>
