--- a/app/comps/usuarios/usuarios.html
+++ b/app/comps/usuarios/usuarios.html
@@ -72,12 +72,26 @@
               <input type="text" ng-model="user.name" class="form-control" ng-if="typeview == 'add' || typeview == 'edit'" placeholder="Nombre">
               <span ng-if="typeview == 'view'" >{{user.name}}</span>
             </div>
+            
+
+            <div class="form-group">
+              <label>Email:</label><br>
+              <span ng-if="typeview == 'view'"  >{{user.email}}</span>
+              <input type="email" ng-model="user.email"  ng-keyup="availableEmail()" ng-if="typeview == 'add' || typeview == 'edit'" ng-disabled="typeview == 'edit'"  class="form-control" required placeholder="Username">
+
+            </div>
+            <div  ng-show="!emailValid" class="invalid-feedback">
+              Por favor, elija un email valido.
+            </div>
 
             <div class="form-group">
               <label>Username:</label><br>
               <span ng-if="typeview == 'view'"  >{{user.username}}</span>
               <input type="text" ng-model="user.username"  ng-keyup="availableUser()" ng-if="typeview == 'add' || typeview == 'edit'" ng-disabled="typeview == 'edit'"  class="form-control" placeholder="Username">
 
+            </div>
+            <div ng-show="!usernameValid" class="invalid-feedback">
+              Por favor, elija un nombre de usuario.
             </div>
 
             <label>Estatus</label>
@@ -145,8 +159,8 @@
       <div class="modal-footer" style="display: block;margin: 0 auto;">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
         <button type="button"  class="btn btn-primary" ng-if=" userLogged.permisos.usuario.editar && typeview == 'view'" ng-click="goToEdit();">Editar</button>
-        <button type="button" class="btn btn-primary" ng-click="addUser(user);"  ng-if="typeview == 'add'" >Guardar</button>
-        <button type="button" class="btn btn-success" ng-click="updUser(user);"  ng-if="typeview == 'edit'" >Guardar</button>
+        <button type="submit" class="btn btn-primary" ng-click="addUser(user);"  ng-if="typeview == 'add'" >Guardar</button>
+        <button type="submit" class="btn btn-success" ng-click="updUser(user);"  ng-if="typeview == 'edit'" >Guardar</button>
         <!-- <button type="button" class="btn btn-primary" data-dismiss="modal" ng-click="addUser(user);">Cerrar</button> -->
       </div>
     </div>
