--- a/app/comps/olvidoPass/olvidoPass.html
+++ b/app/comps/olvidoPass/olvidoPass.html
@@ -4,13 +4,13 @@
 
 <div class="container">
 	<div class="row">
-		<div class="col-md-4 col-md-offset-4">
+		<div class="col-md-12 col-md-offset-12">
             <div class="panel panel-default">
               <div class="panel-body">
                 <div class="text-center">
                   <h3><i class="fa fa-lock fa-4x"></i></h3>
-                  <h2 class="text-center">Forgot Password?</h2>
-                  <p>You can reset your password here.</p>
+                  <h2 class="text-center">¿Se te olvidó tu contraseña?</h2>
+                  <p>Puede restablecer su contraseña aquí.</p>
                   <div class="panel-body">
     
                     <form id="register-form" role="form" autocomplete="off" class="form" method="post">
@@ -18,11 +18,11 @@
                       <div class="form-group">
                         <div class="input-group">
                           <span class="input-group-addon"><i class="glyphicon glyphicon-envelope color-blue"></i></span>
-                          <input id="email" name="email" placeholder="email address" class="form-control"  type="email">
+                          <input id="email" name="email" ng placeholder="email o username" class="form-control"  type="email">
                         </div>
                       </div>
                       <div class="form-group">
-                        <input name="recover-submit" class="btn btn-lg btn-primary btn-block" value="Reset Password" type="submit">
+                        <input name="recover-submit" class="btn btn-lg btn-primary btn-block" ng-click="user.username"  type="button">
                       </div>
                       
                       <input type="hidden" class="hide" name="token" id="token" value=""> 
