--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -1112,7 +1112,7 @@
                   </div>
                   <div class="col-md-6">
 
-                    <button class="btn btn-warning" style="float: left; font-weight: bold;margin-bottom: 1rem;" ng-click="infoPsico = true;" ng-show="!infoPsico"  > <i class="fa fa-info-circle"></i> Requisitos para Psicotropicos</button>
+                    <button class="btn btn-warning" style="float: left; font-weight: bold;margin-bottom: 1rem;" ng-click="infoPsico = true;" ng-show="!infoPsico"  > <i class="fa fa-info-circle"></i> Requisitos para psicotrópico</button>
                   </div>
 
 
@@ -1134,7 +1134,7 @@
                     </div>
 
                     <div class="alert alert-warning alert-dismissible fade show" ng-show="msgOrdCancel" role="alert">
-                      <strong>Advertencia!</strong> Dispone de menos de 15 minutos para finalizar su pedido de lo contrario sera cancelado por el sistema
+                      <strong>¡Advertencia!</strong> Dispone de menos de 15 minutos para finalizar su pedido de lo contrario será cancelado por el sistema.
                     </div>
                   </div>
 
