--- a/app/comps/olvidoPass/olvidoPass.html
+++ b/app/comps/olvidoPass/olvidoPass.html
@@ -13,7 +13,7 @@
                   <p>Puede restablecer su contraseña aquí.</p>
                   <div class="panel-body">
     
-                    <form id="register-form" role="form" autocomplete="off" class="form" method="post">
+                    <form >
     
                       <div class="form-group">
                         <div class="input-group">
