--- a/app/comps/olvidoPass/olvidoPass.html
+++ b/app/comps/olvidoPass/olvidoPass.html
@@ -22,10 +22,9 @@
                         </div>
                       </div>
                       <div class="form-group">
-                        <input name="recover-submit" class="btn btn-lg btn-primary btn-block" ng-click="user.username"  type="button">
+                        <input name="recover" class="btn btn-lg btn-primary btn-block" ng-click="user.username"  type="button">
                       </div>
                       
-                      <input type="hidden" class="hide" name="token" id="token" value=""> 
                     </form>
     
                   </div>
