--- a/app/comps/olvidoPass/olvidoPass.html
+++ b/app/comps/olvidoPass/olvidoPass.html
@@ -22,7 +22,7 @@
                         </div>
                       </div>
                       <div class="form-group">
-                        <input name="recover" class="btn btn-lg btn-primary btn-block" ng-click="resetPass()"   type="button">
+                        <input name="recover" class="btn btn-lg btn-primary btn-block" ng-click="resetPass(user)"   type="button">
                       </div>
                       
                     </form>
