--- a/app/comps/olvidoPass/olvidoPass.html
+++ b/app/comps/olvidoPass/olvidoPass.html
@@ -18,7 +18,8 @@
                       <div class="form-group">
                         <div class="input-group">
                           <span class="input-group-addon"><i class="glyphicon glyphicon-envelope color-blue"></i></span>
-                          <input id="email" name="email" ng-model="user.username" placeholder="email o username" class="form-control"  type="email">
+                          <!-- <input id="email" name="email" ng-model="user.username" placeholder="email o username" class="form-control"  type="email"> -->
+                          <input type="text" ng-model="user.username"   class="form-control" placeholder="Username">
                         </div>
                       </div>
                       <div class="form-group">
