--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -325,7 +325,7 @@
         <div class="card-header mb-3">
           Fecha:
           <strong>{{pedido.fecha}}</strong>
-          <span class="float-right ml-3" ng-show="editView" > <strong>tiempo:</strong> {{msToTime(counter)}}</span>
+          <span class="float-right ml-3" ng-show="editView" > <strong>tiempo:</strong> {{msToTime(counter*1000)}}</span>
           <span class="float-right"> <strong>Estatus:</strong> {{pedido.estatus}}</span>
           </div>
 
