--- a/app/index.html
+++ b/app/index.html
@@ -106,6 +106,8 @@
   <script src="bower_components/moment/min/moment.min.js" ></script>
   <script src="bower_components/angular-timer/dist/angular-timer.min.js"></script>
 
+  <script src="bower_components/ng-idle/angular-idle.min.js" ></script>
+
 
   <script src="app.js"></script>
 
