--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -15,7 +15,11 @@
         </div>
         <div class="card-header mb-3 " ng-show="counter > 0" >
   
-            <span class="float-right"> <strong>tiempo:</strong> {{msToTime(counter)}}</span>
+            <span class="float-right"> <strong>tiempo:</strong>
+              <div idle-countdown="countdown">
+              cierre de sesion en {{countdown}} seconds.
+            </div>
+          </span>
         </div>
         <div class="modal-body">
   
@@ -36,7 +40,7 @@
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
-            <div class="alert alert-danger alert-dismissible fade show" ng-show="counter >= timeLimit" role="alert">
+            <div class="alert alert-danger alert-dismissible fade show" ng-show="counter < 1" role="alert">
               <strong>INFO!</strong> Su tiempo para elaborar el pedido se a agotado
               <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
@@ -327,9 +331,9 @@
             Fecha:
             <strong>{{pedido.fecha}}</strong>
             <span class="float-right ml-3" ng-show="editView" > 
-              <strong>tiempo:</strong> {{msToTime(counter*1000)}} 
+              <!-- <strong>tiempo:</strong> {{msToTime(counter*1000)}}  -->
               <div idle-countdown="countdown">
-                Timeout in {{countdown}} seconds.
+                cierre de sesion en {{countdown}} seconds.
               </div>
             </span>
             <span class="float-right"> <strong>Estatus:</strong> {{pedido.estatus}}</span>
@@ -347,7 +351,7 @@
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
-            <div class="alert alert-danger alert-dismissible fade show" ng-show="counter >= timeLimit" role="alert">
+            <div class="alert alert-danger alert-dismissible fade show" ng-show="counter < 1" role="alert">
               <strong>INFO!</strong> Su tiempo para elaborar el pedido se a agotado
               <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
