--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -333,6 +333,7 @@
             <strong>{{pedido.fecha}}</strong>
             <span class="float-right ml-3" ng-show="editView" > 
               <!-- <strong>tiempo:</strong> {{msToTime(counter*1000)}}  -->
+              <div ng-if="showIdle"><strong>tiempo de inactividad </strong>:{{idleCount}} segundos</div>
               <div ng-if="showTimeout" idle-countdown="countdown">
                 cierre de sesion en {{countdown}} seconds.
               </div>
