--- a/app/index.html
+++ b/app/index.html
@@ -71,9 +71,9 @@
 
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-info" data-dismiss="modal">Cancelar</button>
+            <button type="button" class="btn btn-info" data-dismiss="modal">No</button>
             <a href="#!/login"  >
-              <button type="button" class="btn btn-danger" >Salir</button>
+              <button type="button" class="btn btn-danger" >Si</button>
             </a>
           </div>
         </div>
