--- a/app/comps/facturado/facturado.html
+++ b/app/comps/facturado/facturado.html
@@ -24,7 +24,7 @@
                   <table datatable="ng" dt-options="dtOptionsFact"  class="table table-striped table-bordered" >
                     <thead>
                         <tr>
-                        <th scope="col"><p class="text-center">#</p></th>
+                        <th scope="col"><p class="text-center">Linea</p></th>
                         <th scope="col"><p class="text-center">Nombre articulo</p></th>
                         <!-- <th scope="col"><p class="text-center">Fecha pedido</p></th> -->
                         <!-- <th scope="col"><p class="text-center">Fecha factura</p></th> -->
@@ -40,7 +40,7 @@
 
                         <tr ng-repeat="x in factura"  >
 
-                            <td><p class="text-center">{{ fact.no_linea }}</p></td>
+                            <td><p class="text-center">{{ x.no_linea }}</p></td>
                             <td><p class="text-center">{{ x.nombre_arti }}</p></td>
                             <!-- <td><p class="text-right">{{  x.fecha_pedido }}</p></td> -->
                             <!-- <td><p class="text-right">{{  x.fecha_factura }}</p></td> -->
@@ -61,29 +61,29 @@
                     </table>
 
 
-                                    <div class="row">
-                                      <div class="col-lg-2 col-sm-5">
-                                        </div>
-                                          <div class="col-lg-6 col-sm-6 ml-auto">
-                                              <table class="table table-clear">
-                                                  <tbody>
+                      <div class="row">
+                        <div class="col-lg-2 col-sm-5">
+                          </div>
+                            <div class="col-lg-6 col-sm-6 ml-auto">
+                                <table class="table table-clear">
+                                    <tbody>
 
-                                                      <tr>
-                                                          <td class="right">
-                                                              <strong class="text-dark">Total Bs.s</strong> </td>
+                                        <tr>
+                                            <td class="right">
+                                                <strong class="text-dark">Total Bs.s</strong> </td>
 
-                                                              <td class="right">{{formato(2,totalfactura.bs)}} </td>
-                                                      </tr>
-                                                      <tr>
-                                                          <td class="right">
-                                                              <strong class="text-dark">Total USD</strong> </td>
+                                                <td class="right">{{formato(2,totalfactura.bs)}} </td>
+                                        </tr>
+                                        <tr>
+                                            <td class="right">
+                                                <strong class="text-dark">Total USD</strong> </td>
 
-                                                              <td class="right">{{formato(3,totalfactura.usd)}} </td>
-                                                      </tr>
-                                                  </tbody>
-                                              </table>
-                                          </div>
-                                      </div>
+                                                <td class="right">{{formato(3,totalfactura.usd)}} </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
                 </div>
 
 
