--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -643,7 +643,7 @@
                                     <td class="right">
                                         <strong class="text-dark">I.V.A. </strong> </td>
 
-                                        <td class="right">{{totalesDdo.impuesto  formato(2,totalesDdo.descImpuesto)}} </td>
+                                        <td class="right">{{totalesDdo.impuesto }} {{formato(2,totalesDdo.descImpuesto)}} </td>
                                 </tr>
                                 <tr>
                                     <td class="right">
