--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -649,7 +649,7 @@
                                     <td class="right">
                                         <strong class="text-dark">Total</strong> </td>
 
-                                        <td class="right">{{formato(2,totalNetoUSD) }} {{fixformato(2,totalesDdo.total)}} </td>
+                                        <td class="right">{{formato(2,totalNetoUSD) }} {{formato(2,totalesDdo.total)}} </td>
                                 </tr>
                               </tbody>
                           </table>
