--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -293,13 +293,13 @@
                                         <td class="right">
                                             <strong class="text-dark">I.V.A. </strong> </td>
   
-                                            <td class="right">{{totalesDdo.impuesto }} {{formato(2,totalesDdo.descImpuesto)}} </td>
+                                            <td class="right">% {{totalesDdo.impuesto }} {{formato(2,totalesDdo.descImpuesto)}} </td>
                                     </tr>
                                     <tr>
                                         <td class="right">
                                             <strong class="text-dark">Total</strong> </td>
   
-                                            <td class="right">{{formato(2,totalNetoUSD)  }}{{formato(2,totalesDdo.total)}} </td>
+                                            <td class="right">USD {{ formato(3,totalesDdo.totalNetoUSD) }} {{formato(2,totalesDdo.total)}} </td>
                                     </tr>
                                 </tbody>
                             </table>
