--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -293,7 +293,8 @@
                                         <td class="right">
                                             <strong class="text-dark">I.V.A. </strong> </td>
   
-                                            <td class="right">% {{totalesDdo.impuesto }} {{formato(2,totalesDdo.descImpuesto)}} </td>
+                                            <!-- <td class="right">% {{totalesDdo.impuesto }} {{formato(2,totalesDdo.descImpuesto)}} </td> -->
+                                            <td class="right">{{totalesDdo.descImpuesto }}  </td>
                                     </tr>
                                     <tr>
                                         <td class="right">
@@ -643,7 +644,8 @@
                                     <td class="right">
                                         <strong class="text-dark">I.V.A. </strong> </td>
 
-                                        <td class="right">{{totalesDdo.impuesto }} {{formato(2,totalesDdo.descImpuesto)}} </td>
+                                        <!-- <td class="right">{{totalesDdo.descImpuesto }} {{formato(2,totalesDdo.descImpuesto)}} </td> -->
+                                        <td class="right">{{totalesDdo.descImpuesto }}  </td>
                                 </tr>
                                 <tr>
                                     <td class="right">
