--- a/app/comps/deuda/deuda.html
+++ b/app/comps/deuda/deuda.html
@@ -23,7 +23,7 @@
                 <!-- <th scope="col"><p class="text-center">Serie</p></th> -->
                 <th scope="col"><p class="text-center">Fecha documento</p></th>
                 <th scope="col"><p class="text-center">Fecha vencimiento</p></th>
-                <th scope="col"><p class="text-center">Monto inicial</p></th>
+                <th scope="col"><p class="text-center">Monto Original</p></th>
                 <th scope="col"><p class="text-center">Monto actual</p></th>
                 <th scope="col"><p class="text-center">Fecha entrega</p></th>
                 <!--
